tests/spec/emit/snapshots/match_on_chained_alias_of_go_interface_emits_type_switch.snap
---
source: tests/spec/emit/patterns.rs
description: "input: \nimport \"go:example.com/events\"\n\nfn handle(m: events.Outer) -> int {\n  match m {\n    events.Click { x, y } => x + y,\n    events.KeyPress { key } => key.length(),\n    _ => 0,\n  }\n}\n"
---
package main

import "example.com/events"

func handle(m events.Outer) int {
	switch m := m.(type) {
	case events.Click:
		return m.X + m.Y
	case events.KeyPress:
		return len(m.Key)
	default:
		return 0
	}
}
