tests/spec/emit/snapshots/match_on_enum.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  enum Color { Red, Green, Blue }
  
  fn test(color: Color) -> int {
    match color {
      Red => 1,
      Green => 2,
      Blue => 3,
    }
  }
---
package main

func MakeColorRed() Color {
	return Color{Tag: ColorRed}
}

func MakeColorGreen() Color {
	return Color{Tag: ColorGreen}
}

func MakeColorBlue() Color {
	return Color{Tag: ColorBlue}
}

type ColorTag uint8

const (
	ColorRed ColorTag = iota
	ColorGreen
	ColorBlue
)

type Color struct {
	Tag ColorTag
}

func test(color Color) int {
	switch color.Tag {
	case ColorRed:
		return 1
	case ColorGreen:
		return 2
	default:
		return 3
	}
}
