tests/spec/emit/snapshots/match_on_enum_variant_as_subject.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  enum Dir { North, South, East }
  
  fn test() -> string {
    match Dir.North {
      Dir.North => "north",
      Dir.South => "south",
      _ => "other",
    }
  }
---
package main

func MakeDirNorth() Dir {
	return Dir{Tag: DirNorth}
}

func MakeDirSouth() Dir {
	return Dir{Tag: DirSouth}
}

func MakeDirEast() Dir {
	return Dir{Tag: DirEast}
}

type DirTag uint8

const (
	DirNorth DirTag = iota
	DirSouth
	DirEast
)

type Dir struct {
	Tag DirTag
}

func test() string {
	switch MakeDirNorth().Tag {
	case DirNorth:
		return "north"
	case DirSouth:
		return "south"
	default:
		return "other"
	}
}
