tests/spec/emit/snapshots/match_on_find_uses_a_found_flag.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn first_even(nums: Slice<int>) -> int {
    match nums.find(|n| n % 2 == 0) {
      Some(n) => n,
      None => -1,
    }
  }
---
package main

func firstEven(nums []int) int {
	var n int
	found := false
	for _, n_1 := range nums {
		if n_1%2 == 0 {
			n = n_1
			found = true
			break
		}
	}
	if found {
		return n
	}
	return -1
}
