tests/spec/emit/snapshots/match_on_go_interface_emits_type_switch.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/events"
  
  fn handle(e: events.Event) -> int {
    match e {
      events.Click { x, y } => x + y,
      events.KeyPress { key } => key.length(),
      _ => 0,
    }
  }
---
package main

import "example.com/events"

func handle(e events.Event) int {
	switch e := e.(type) {
	case events.Click:
		return e.X + e.Y
	case events.KeyPress:
		return len(e.Key)
	default:
		return 0
	}
}
