tests/spec/emit/snapshots/match_on_go_interface_guarded_arm.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/events"
  
  fn handle(e: events.Event, active: bool) -> int {
    match e {
      events.Click { x, y } => x + y,
      events.KeyPress { .. } if active => -1,
      _ => 0,
    }
  }
---
package main

import "example.com/events"

func handle(e events.Event, active bool) int {
	switch e := e.(type) {
	case events.Click:
		return e.X + e.Y
	case events.KeyPress:
		if active {
			return -1
		}
		return 0
	default:
		return 0
	}
}
