tests/spec/emit/snapshots/match_on_slice_get_with_a_variable_index_guards_both_bounds.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn pick(xs: Slice<int>, i: int) -> int {
    match xs.get(i) {
      Some(v) => v,
      None => -1,
    }
  }
---
package main

func pick(xs []int, i int) int {
	if i >= 0 && i < len(xs) {
		return xs[i]
	}
	return -1
}
